<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_characterlist">

    <fragment
        android:id="@+id/navigation_characterlist"
        android:name="com.simonllano.harrypottercharacters.ui.characterslist.CharacterFragment"
        android:label="@string/title_characters_list"
        tools:layout="@layout/fragment_character" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.simonllano.harrypottercharacters.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.simonllano.harrypottercharacters.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>